<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity -->
    <string name="error_message">Error fetching movie data!</string>
    <string name="most_popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>

    <string name="favorites">Favorites</string>

    <!--Menu-->
    <string name="sort_menu_title">Sort</string>
    <string name="sort_most_popular">Sort by Popularity</string>
    <string name="sort_top_rated">Sort by Top Rated</string>
    <string name="show_favorites">Show Favorites</string>

    <!--Activity Movie Detail -->
    <string name="movie_detail_activity_title">Movie Details</string>
    <string name="movie_title">Movie title</string>
    <string name="release_date">Release date</string>
    <string name="movie_rating">Movie rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="watch_later">To Watch</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="out_of_ten" translatable="false">%1$s/10.0</string>

    <!--Error Messages-->
    <string name="generic_error">"Oops! something went horribly wrong :("</string>
    <string name="no_internet">"Lost internet connection."</string>
    <string name="retry">Retry</string>
    <string name="error_reviews">Error fetching reviews.</string>
    <string name="error_trailers">Error fetching trailers.</string>

    <!--Empty States-->
    <string name="no_trailers">No trailers available.</string>
    <string name="no_reviews">No reviews available.</string>
    <string name="no_movies">No movies found!</string>

    <!--Share-->
    <string name="share_movie">Share movie</string>
    <string name="check_out_movie">Check out "%1$s"! %2$s</string>

    <!--Search-->
    <string name="search_hint">Search movies</string>
    <string name="title_activity_search_results">Search</string>
    <string name="action_settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="my_lists">My Lists</string>
    <string name="cast">Cast</string>
    <string name="no_cast">No cast.</string>
    <string name="error_cast">Error fetching cast.</string>
    <string name="search">search</string>
    <string name="movies">Movies</string>
    <string name="no_movie_credits">No movie credits.</string>
    <string name="error_movie_credits">Error fetching movie credits.</string>
    <string name="cast_details">Cast Details</string>
    <string name="movie_details">Movie Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Cast Details-->
    <string name="info">Info</string>
    <string name="movie_credits">Movie Credits</string>
    <string name="loading">Loading...</string>
</resources>
