<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/activity_horizontal_margin_small"
            app:expandedTitleMarginEnd="@dimen/activity_horizontal_margin_small"
            app:expandedTitleMarginBottom="@dimen/activity_vertical_margin"
            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
            app:title="@string/movie_details">

            <!--Image View-->
            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--Content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/primary_details"/>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/details_screen_user_actions"/>

            <!--Trailers-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_general"
                android:text="@string/trailers"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <ProgressBar
                android:id="@+id/trailersLoadingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trailersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/trailersEmptyStateLabel"
                android:text="@string/no_trailers"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <TextView
                android:id="@+id/trailersErrorStateLabel"
                android:text="@string/error_reviews"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <!--Cast-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_general"
                android:text="@string/cast"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <ProgressBar
                android:id="@+id/castLoadingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/castRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/castEmptyStateLabel"
                android:text="@string/no_cast"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <TextView
                android:id="@+id/castErrorStateLabel"
                android:text="@string/error_cast"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <!-- Similar Movies -->
            <com.asmat.rolando.nightwing.ui.row_view.RowView
                android:id="@+id/similarMoviesRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Recommended Movies -->
            <com.asmat.rolando.nightwing.ui.row_view.RowView
                android:id="@+id/recommendedMoviesRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- More From Director Movies -->
            <com.asmat.rolando.nightwing.ui.row_view.RowView
                android:id="@+id/moreFromDirectorMoviesRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Reviews-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_general"
                android:text="@string/reviews"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <ProgressBar
                android:id="@+id/reviewsLoadingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="@dimen/activity_margin_general"/>

            <TextView
                android:id="@+id/reviewsEmptyStateLabel"
                android:text="@string/no_reviews"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <TextView
                android:id="@+id/reviewsErrorStateLabel"
                android:text="@string/error_reviews"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>